--- a/pyspark-dataframe-lab.ipynb
+++ b/pyspark-dataframe-lab.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 1,
    "id": "2b2e6bb8",
    "metadata": {},
    "outputs": [],
@@ -23,13 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 2,
    "id": "f071f062",
    "metadata": {},
    "outputs": [],
    "source": [
     "#set the PySpark environment veriable\n",
-    "os.environ['JAVA_HOME']=\"C:\\Program Files\\Java\\jdk-22\"\n",
+    "os.environ['JAVA_HOME']=\"E:\\jdk-22\"\n",
     "os.environ['SPARK_HOME'] = \"E:\\spark-3.5.1-bin-hadoop3\"\n",
     "os.environ['PYSPARK_DRIVER_PYTHON'] = \"jupyter\"\n",
     "os.environ['PYSPARK_DRIVER_PYTHON_OPS'] = \"notebook\"\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 3,
    "id": "67057373",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 4,
    "id": "04952b26",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 5,
    "id": "e6ce2048",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://DESKTOP-BE50MUO:4040\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://DESKTOP-BE50MUO:4041\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -91,7 +91,7 @@
        "<SparkContext master=local[*] appName=Practice>"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 6,
    "id": "e2b3458d",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 7,
    "id": "c391305d",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 8,
    "id": "59e9c0a8",
    "metadata": {},
    "outputs": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 9,
    "id": "33b20e18",
    "metadata": {},
    "outputs": [
